feat: state of art and bib updated

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -48,3 +48,55 @@ author = {Ross Gruetzemacher and Jess Whittlestone},
 keywords = {Artificial Intelligence, Transformative AI, Human-level AI, Artificial general intelligence},
 abstract = {The terms 'human-level artificial intelligence' and 'artificial general intelligence' are widely used to refer to the possibility of advanced artificial intelligence (AI) with potentially extreme impacts on society. These terms are poorly defined and do not necessarily indicate what is most important with respect to future societal impacts. We suggest that the term 'transformative AI' is a helpful alternative, reflecting the possibility that advanced AI systems could have very large impacts on society without reaching human-level cognitive abilities. To be most useful, however, more analysis of what it means for AI to be 'transformative' is needed. In this paper, we propose three different levels on which AI might be said to be transformative, associated with different levels of societal change. We suggest that these distinctions would improve conversations between policy makers and decision makers concerning the mid- to long-term impacts of advances in AI. Further, we feel this would have a positive effect on strategic foresight efforts involving advanced AI, which we expect to illuminate paths to alternative futures. We conclude with a discussion of the benefits of our new framework and by highlighting directions for future work in this area.}
 }
+
+@inproceedings{10.1145/3308560.3317590,
+author = {Roselli, Drew and Matthews, Jeanna and Talagala, Nisha},
+title = {Managing Bias in AI},
+year = {2019},
+isbn = {9781450366755},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3308560.3317590},
+doi = {10.1145/3308560.3317590},
+abstract = {Recent awareness of the impacts of bias in AI algorithms raises the risk for companies to deploy such algorithms, especially because the algorithms may not be explainable in the same way that non-AI algorithms are. Even with careful review of the algorithms and data sets, it may not be possible to delete all unwanted bias, particularly because AI systems learn from historical data, which encodes historical biases. In this paper, we propose a set of processes that companies can use to mitigate and manage three general classes of bias: those related to mapping the business intent into the AI implementation, those that arise due to the distribution of samples used for training, and those that are present in individual input samples. While there may be no simple or complete solution to this issue, best practices can be used to reduce the effects of bias on algorithmic outcomes.},
+booktitle = {Companion Proceedings of The 2019 World Wide Web Conference},
+pages = {539–544},
+numpages = {6},
+keywords = {production monitoring, Artificial intelligence, bias},
+location = {San Francisco, USA},
+series = {WWW '19}
+}
+
+@article{https://doi.org/10.1002/widm.1356,
+author = {Ntoutsi, Eirini and Fafalios, Pavlos and Gadiraju, Ujwal and Iosifidis, Vasileios and Nejdl, Wolfgang and Vidal, Maria-Esther and Ruggieri, Salvatore and Turini, Franco and Papadopoulos, Symeon and Krasanakis, Emmanouil and Kompatsiaris, Ioannis and Kinder-Kurlanda, Katharina and Wagner, Claudia and Karimi, Fariba and Fernandez, Miriam and Alani, Harith and Berendt, Bettina and Kruegel, Tina and Heinze, Christian and Broelemann, Klaus and Kasneci, Gjergji and Tiropanis, Thanassis and Staab, Steffen},
+title = {Bias in data-driven artificial intelligence systems—An introductory survey},
+journal = {WIREs Data Mining and Knowledge Discovery},
+volume = {10},
+number = {3},
+pages = {e1356},
+keywords = {fairness, fairness-aware AI, fairness-aware machine learning, interpretability, responsible AI},
+doi = {https://doi.org/10.1002/widm.1356},
+url = {https://wires.onlinelibrary.wiley.com/doi/abs/10.1002/widm.1356},
+eprint = {https://wires.onlinelibrary.wiley.com/doi/pdf/10.1002/widm.1356},
+abstract = {Abstract Artificial Intelligence (AI)-based systems are widely employed nowadays to make decisions that have far-reaching impact on individuals and society. Their decisions might affect everyone, everywhere, and anytime, entailing concerns about potential human rights issues. Therefore, it is necessary to move beyond traditional AI algorithms optimized for predictive performance and embed ethical and legal principles in their design, training, and deployment to ensure social good while still benefiting from the huge potential of the AI technology. The goal of this survey is to provide a broad multidisciplinary overview of the area of bias in AI systems, focusing on technical challenges and solutions as well as to suggest new research directions towards approaches well-grounded in a legal frame. In this survey, we focus on data-driven AI, as a large part of AI is powered nowadays by (big) data and powerful machine learning algorithms. If otherwise not specified, we use the general term bias to describe problems related to the gathering or processing of data that might result in prejudiced decisions on the bases of demographic features such as race, sex, and so forth. This article is categorized under: Commercial, Legal, and Ethical Issues > Fairness in Data Mining Commercial, Legal, and Ethical Issues > Ethical Considerations Commercial, Legal, and Ethical Issues > Legal Issues},
+year = {2020}
+}
+
+@article{10.1145/2983270,
+author = {Kirkpatrick, Keith},
+title = {Battling Algorithmic Bias: How Do We Ensure Algorithms Treat Us Fairly?},
+year = {2016},
+issue_date = {October 2016},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {59},
+number = {10},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/2983270},
+doi = {10.1145/2983270},
+journal = {Commun. ACM},
+month = {sep},
+pages = {16–17},
+numpages = {2}
+}
+
