--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -108,6 +108,17 @@ Artificial Intelligence (AI) holds immense promise for revolutionizing various a
 \subsection{Understanding Bias in AI}
 Bias in AI refers to the unfair and skewed representation or treatment of individuals or groups based on factors such as race, gender, age, socioeconomic status, or other characteristics. These biases can be unintentionally perpetuated during the development and training of AI models due to historical data imbalances, societal prejudices, or flawed algorithms.
 
+\subsection{Sources of Bias}
+\begin{itemize}
+    \item \textbf{Historical data}: Bias arising from historical data is a significant concern in machine learning. When models are trained on historical data, they learn the patterns and biases inherent in that data. These historical biases, often reflective of societal prejudices and inequalities, can perpetuate and reinforce unfair outcomes when the model is deployed. For instance, if historical data contains biases against a particular demographic, such as gender or race, the model will learn and replicate these biases in its predictions or decisions. This perpetuation of historical biases through machine learning systems can lead to discriminatory practices, reinforcing existing inequalities and disadvantaging certain groups. Addressing bias from historical data requires careful consideration and proactive measures, including data preprocessing techniques to identify and mitigate bias, algorithmic fairness interventions, and ongoing monitoring and adjustment of models to ensure fairness and equitable treatment for all individuals, irrespective of their backgrounds. It's crucial to strive for a future where machine learning not only learns from historical data but also actively works to break free from the shackles of bias and promote a fair and just society. \cite{10.1145/3308560.3317590}
+    \item \textbf{Human bias}: Bias introduced by human factors is a pervasive challenge in machine learning. Human bias, stemming from societal, cultural, or personal beliefs and attitudes, can inadvertently permeate the entire machine learning pipeline, from data collection and annotation to model training and decision-making. Human bias can manifest in various ways, such as the biased selection of training data, subjective annotations, or implicit prejudices when designing or evaluating algorithms. When humans are involved in the decision-making process or contribute to the development of algorithms, their biases can be unintentionally embedded in the model, leading to skewed predictions and reinforcing societal inequalities. Recognizing and mitigating human bias is crucial for developing fair machine learning models. This involves raising awareness, promoting diversity and inclusion, implementing bias detection and mitigation techniques, and continually refining algorithms to ensure that the impact of human bias is minimized, and the models contribute to a more equitable and unbiased society. \cite{https://doi.org/10.1002/widm.1356}
+    \item \textbf{Algorithmic bias}: Certainly! Algorithmic bias refers to the inherent biases that can be present in the design, development, and implementation of machine learning algorithms. These biases can inadvertently emerge due to a variety of factors, such as biased training data, skewed feature selection, or implicit assumptions made during algorithm development. Algorithmic bias can perpetuate and amplify existing societal prejudices and inequalities, leading to unfair and discriminatory outcomes. For example, if a model is trained on historical data that reflects societal biases, the algorithm can inadvertently learn and reinforce these biases, resulting in biased predictions and decisions. Detecting and mitigating algorithmic bias is of utmost importance in building fair and just AI systems. This involves careful scrutiny of the entire machine learning pipeline, addressing bias in training data, utilizing fairness-aware algorithms, and incorporating transparency and fairness into the decision-making process to ensure that the algorithms are equitable, unbiased, and promote fairness and equal treatment for all. \cite{10.1145/2983270}
+\end{itemize}
+
+\subsubsection{Race and Gender Bias in Facial Recognition}
+Race and gender bias in facial recognition technology is a pressing and concerning issue that highlights the ethical challenges associated with AI development. Facial recognition systems, often trained on large datasets, inadvertently perpetuate biases present in these datasets, particularly biases related to race and gender. The lack of diversity in training data, predominantly skewed towards certain demographics, results in algorithmic bias, where the system may struggle to accurately recognize individuals from underrepresented racial or gender groups. Studies have shown that these systems are often more accurate for individuals with lighter skin tones compared to those with darker skin tones, demonstrating a clear racial bias. Similarly, gender recognition algorithms may exhibit inaccuracies, especially for gender-nonconforming individuals, further exacerbating biases.
+
+These biases have far-reaching implications. Law enforcement agencies using facial recognition may disproportionately target and misidentify individuals from minority communities, leading to wrongful arrests or increased surveillance. In commercial applications, biased facial recognition can impact hiring processes, access to services, and overall societal fairness. Addressing these biases requires comprehensive strategies, including diversifying training data to be more representative, developing bias detection and mitigation techniques, promoting interdisciplinary research, and fostering discussions around the ethical implications of facial recognition technology. Additionally, regulatory frameworks and guidelines are essential to ensure that these technologies are deployed responsibly, with transparency, accountability, and fairness in mind, to mitigate the adverse effects of bias and foster a more equitable future.
 %Write background here.
 
 %This section is likely to contain a lot of citations.
