feat: bib and state of art updated

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -100,3 +100,68 @@ pages = {16–17},
 numpages = {2}
 }
 
+@techreport{https://doi.org/10.5281/zenodo.4050457,
+doi = {10.5281/ZENODO.4050457},
+url = {https://zenodo.org/record/4050457},
+author = {Leslie, David},
+keywords = {facial recognition technologies, algorithmic bias, digital ethics, responsible innovation, biometric technologies},
+title = {Understanding bias in facial recognition technologies},
+publisher = {Zenodo},
+year = {2020},
+copyright = {Creative Commons Attribution 4.0 International}
+}
+
+@INPROCEEDINGS{9660177,
+author={Noiret, Sophie and Lumetzberger, Jennifer and Kampel, Martin},
+booktitle={2021 IEEE Symposium Series on Computational Intelligence (SSCI)}, 
+title={Bias and Fairness in Computer Vision Applications of the Criminal Justice System}, 
+year={2021},
+volume={},
+number={},
+pages={1-8},
+doi={10.1109/SSCI50451.2021.9660177}}
+
+@article{doi:10.1080/10345329.2019.1658694,
+author = {Carolyn McKay},
+title = {Predicting risk in criminal procedure: actuarial tools, algorithms, AI and judicial decision-making},
+journal = {Current Issues in Criminal Justice},
+volume = {32},
+number = {1},
+pages = {22-39},
+year = {2020},
+publisher = {Routledge},
+doi = {10.1080/10345329.2019.1658694}}
+
+@article{gebru2020race,
+title={Race and gender},
+author={Gebru, Timnit},
+journal={The Oxford handbook of ethics of aI},
+pages={251--269},
+year={2020},
+publisher={Oxford University Press Oxford}
+}
+
+@inproceedings{mujtaba2019ethical,
+title={Ethical considerations in AI-based recruitment},
+author={Mujtaba, Dena F and Mahapatra, Nihar R},
+booktitle={2019 IEEE International Symposium on Technology and Society (ISTAS)},
+pages={1--7},
+year={2019},
+organization={IEEE}
+}
+
+@article{10.1145/3616865,
+author = {Caton, Simon and Haas, Christian},
+title = {Fairness in Machine Learning: A Survey},
+year = {2023},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+issn = {0360-0300},
+url = {https://doi.org/10.1145/3616865},
+doi = {10.1145/3616865},
+abstract = {When Machine Learning technologies are used in contexts that affect citizens, companies as well as researchers need to be confident that there will not be any unexpected social implications, such as bias towards gender, ethnicity, and/or people with disabilities. There is significant literature on approaches to mitigate bias and promote fairness, yet the area is complex and hard to penetrate for newcomers to the domain. This article seeks to provide an overview of the different schools of thought and approaches that aim to increase the fairness of Machine Learning. It organises approaches into the widely accepted framework of pre-processing, in-processing, and post-processing methods, subcategorizing into a further 11 method areas. Although much of the literature emphasizes binary classification, a discussion of fairness in regression, recommender systems, and unsupervised learning is also provided along with a selection of currently available open source libraries. The article concludes by summarising open challenges articulated as five dilemmas for fairness research.},
+note = {Just Accepted},
+journal = {ACM Comput. Surv.},
+month = {aug},
+keywords = {fairness, machine learning, transparency, accountability}
+}
