--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -115,10 +115,56 @@ Bias in AI refers to the unfair and skewed representation or treatment of indivi
     \item \textbf{Algorithmic bias}: Certainly! Algorithmic bias refers to the inherent biases that can be present in the design, development, and implementation of machine learning algorithms. These biases can inadvertently emerge due to a variety of factors, such as biased training data, skewed feature selection, or implicit assumptions made during algorithm development. Algorithmic bias can perpetuate and amplify existing societal prejudices and inequalities, leading to unfair and discriminatory outcomes. For example, if a model is trained on historical data that reflects societal biases, the algorithm can inadvertently learn and reinforce these biases, resulting in biased predictions and decisions. Detecting and mitigating algorithmic bias is of utmost importance in building fair and just AI systems. This involves careful scrutiny of the entire machine learning pipeline, addressing bias in training data, utilizing fairness-aware algorithms, and incorporating transparency and fairness into the decision-making process to ensure that the algorithms are equitable, unbiased, and promote fairness and equal treatment for all. \cite{10.1145/2983270}
 \end{itemize}
 
+\subsection{Example of Bias in AI}
 \subsubsection{Race and Gender Bias in Facial Recognition}
-Race and gender bias in facial recognition technology is a pressing and concerning issue that highlights the ethical challenges associated with AI development. Facial recognition systems, often trained on large datasets, inadvertently perpetuate biases present in these datasets, particularly biases related to race and gender. The lack of diversity in training data, predominantly skewed towards certain demographics, results in algorithmic bias, where the system may struggle to accurately recognize individuals from underrepresented racial or gender groups. Studies have shown that these systems are often more accurate for individuals with lighter skin tones compared to those with darker skin tones, demonstrating a clear racial bias. Similarly, gender recognition algorithms may exhibit inaccuracies, especially for gender-nonconforming individuals, further exacerbating biases.
+Race and gender bias in facial recognition technology is a pressing and concerning issue that highlights the ethical challenges associated with AI development. Facial recognition systems, often trained on large datasets, inadvertently perpetuate biases present in these datasets, particularly biases related to race and gender. The lack of diversity in training data, predominantly skewed towards certain demographics, results in algorithmic bias, where the system may struggle to accurately recognize individuals from underrepresented racial or gender groups. Studies have shown that these systems are often more accurate for individuals with lighter skin tones compared to those with darker skin tones, demonstrating a clear racial bias. Similarly, gender recognition algorithms may exhibit inaccuracies, especially for gender-nonconforming individuals, further exacerbating biases. \cite{https://doi.org/10.5281/zenodo.4050457}
 
 These biases have far-reaching implications. Law enforcement agencies using facial recognition may disproportionately target and misidentify individuals from minority communities, leading to wrongful arrests or increased surveillance. In commercial applications, biased facial recognition can impact hiring processes, access to services, and overall societal fairness. Addressing these biases requires comprehensive strategies, including diversifying training data to be more representative, developing bias detection and mitigation techniques, promoting interdisciplinary research, and fostering discussions around the ethical implications of facial recognition technology. Additionally, regulatory frameworks and guidelines are essential to ensure that these technologies are deployed responsibly, with transparency, accountability, and fairness in mind, to mitigate the adverse effects of bias and foster a more equitable future.
+
+\subsubsection{Criminal Justice Bias}
+Criminal justice bias is a deeply ingrained issue within the legal system that manifests through unequal treatment of individuals based on their race, socioeconomic status, gender, and other factors. The criminal justice system should ideally operate on principles of fairness, justice, and equality before the law. However, biases at various stages of the criminal justice process, from policing and arrest to trial and sentencing, often lead to discriminatory outcomes. \cite{doi:10.1080/10345329.2019.1658694}
+
+Racial bias is a significant concern, with people of color, especially Black individuals and communities, experiencing disproportionately higher rates of arrest, harsher sentencing, and a lack of trust in the system. Discriminatory practices such as racial profiling and racial disparities in sentencing contribute to this bias. Socioeconomic bias is another critical factor, where individuals from marginalized and low-income communities may face prejudice in the form of limited access to legal resources and unequal treatment within the legal process. \cite{9660177} 
+
+Gender bias is prevalent, particularly against women and gender-diverse individuals. Women can face stereotypes and discriminatory attitudes that affect their treatment by law enforcement, the courts, and correctional facilities. Additionally, biases against LGBTQ+ individuals can result in unfair treatment and disparities in the criminal justice system. \cite{gebru2020race}
+
+Addressing criminal justice bias necessitates comprehensive reform. This includes implementing policies to combat racial and socioeconomic disparities, providing anti-bias training to law enforcement, encouraging diversity within the legal profession, and promoting transparency and accountability in the criminal justice process. Legislation, sentencing reform, community engagement, and the support of marginalized communities are also vital steps toward achieving a fair and impartial criminal justice system that upholds the principles of equity and justice for all.
+
+
+\subsubsection{Recruitment Bias}
+Recruitment bias is a critical issue within the hiring process, where unconscious or conscious prejudices and preconceived notions influence decision-making during candidate selection. It manifests in various forms, such as racial, gender, age, socio-economic, educational, or even appearance-based biases, and can significantly impact the composition of the workforce. \cite{mujtaba2019ethical}
+
+One of the most prevalent forms of recruitment bias is racial or ethnic bias. Hiring decisions can be influenced by stereotypes, leading to the underrepresentation of certain racial or ethnic groups in the workplace. Similarly, gender bias can result in disparities in hiring and promotion opportunities, favoring one gender over another. Age bias often affects older candidates who may be overlooked in favor of younger, perceived to be more 'tech-savvy' individuals.
+
+Educational and socio-economic biases can also seep into the hiring process, where candidates from prestigious institutions or privileged backgrounds may be given preferential treatment. Appearance-based biases, although highly unfortunate, can influence decisions, impacting individuals based on their physical attributes, such as weight, height, or even hairstyle.
+
+Addressing recruitment bias requires a multipronged approach. Firstly, raising awareness and providing training on unconscious bias is essential for hiring teams. Implementing structured and standardized interview processes, blind recruitment techniques (removing personally identifiable information), and diverse interview panels can help mitigate biases. Moreover, organizations should focus on promoting diversity and inclusion, fostering a culture that values different perspectives and backgrounds, and monitoring and analyzing recruitment data to identify patterns of bias. Striving for fairness and inclusivity in the hiring process not only leads to a more diverse workforce but also improves organizational innovation, creativity, and overall success.
+
+\section{Fairness}
+Fairness in AI systems is a crucial and evolving area of focus within the realm of artificial intelligence. It revolves around the ethical and moral obligation to ensure that AI technologies and algorithms treat all individuals equitably and without bias or discrimination. As AI becomes increasingly integrated into various aspects of society, including decision-making processes, job recruitment, lending, and law enforcement, the importance of fairness cannot be overstated.
+
+The concept of fairness in AI encompasses a range of factors, including the avoidance of bias based on attributes like race, gender, age, ethnicity, and socio-economic status. Bias in AI can manifest in various forms, often stemming from biased training data or inherent biases present in the algorithms themselves. Fair AI systems strive to minimize such biases to provide impartial and just outcomes for everyone involved.
+
+Different types of fairness metrics and criteria have been proposed to assess and quantify fairness, such as disparate impact, equal opportunity, and demographic parity. Disparate impact evaluates the differential impact of an AI system on various demographic groups, while equal opportunity ensures that the probability of a positive outcome remains consistent across different groups. Demographic parity, on the other hand, focuses on proportional representation of groups in AI outcomes.
+
+Addressing fairness in AI involves employing various techniques, including pre-processing data to reduce biases, modifying algorithms to be fairness-aware, and implementing post-processing methods to ensure equitable outcomes. Moreover, transparency and explainability in AI models are vital to understanding and addressing potential biases and fostering trust in the technology. \cite{10.1145/3457607}  \cite{10.1145/3194770.3194776}
+
+Ethical considerations are an essential aspect of fairness in AI. Ensuring fairness requires not only technical solutions but also stakeholder involvement, diverse perspectives, and adherence to guidelines and regulations that prioritize fairness and impartiality. In summary, the pursuit of fairness in AI systems is an ongoing journey, necessitating continuous research, collaboration, and ethical vigilance to create AI technologies that uphold the principles of fairness and contribute to a more inclusive and just society.
+
+
+\subsection{Fairness Techniques in AI}
+
+\subsubsection{Pre-processing:}
+Pre-processing focuses on handling the initial data before it is used to train the AI model. This stage is crucial to ensure that the data is balanced and representative of the diversity in the population. Common pre-processing techniques include oversampling, undersampling, noise removal from the data, and creating balanced synthetic datasets.
+
+\subsubsection{In-processing:}
+In-processing techniques intervene directly during the model training phase. This is a more specific approach to ensure fairness in the model. For example, regularization techniques can be used to penalize the model if it shows a discriminatory tendency based on certain sensitive features (such as gender or ethnic origin). Other techniques include modifying the cost functions or manipulating the model's predictions to ensure fair treatment across different categories.
+
+\subsubsection{Post-processing:}
+Post-processing occurs after the model has been trained and has generated predictions. This phase focuses on corrections or modifications to the model's predictions to ensure fairness. For instance, realignments or adjustments can be applied to balance predictions so that there are no unjustified disparities among demographic groups. This process may involve recalibrations or other transformations of the model's results to mitigate biases.
+
+Implementing these techniques requires a deep understanding of the specific fairness challenges in the data and models, as well as ongoing evaluation to ensure that AI adheres to ethical standards and promotes fairness. \cite{10.1145/3616865}
+
 %Write background here.
 
 %This section is likely to contain a lot of citations.
