feat: bib and state of art updated

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -165,3 +165,79 @@ journal = {ACM Comput. Surv.},
 month = {aug},
 keywords = {fairness, machine learning, transparency, accountability}
 }
+
+@ARTICLE{9442706,
+author={Salazar, Teresa and Santos, Miriam Seoane and Araújo, Helder and Abreu, Pedro Henriques},
+journal={IEEE Access}, 
+title={FAWOS: Fairness-Aware Oversampling Algorithm Based on Distributions of Sensitive Attributes}, 
+year={2021},
+volume={9},
+number={},
+pages={81370-81379},
+doi={10.1109/ACCESS.2021.3084121}}
+
+@inproceedings{NEURIPS2019_8d5e957f,
+ author = {Lamy, Alex and Zhong, Ziyuan and Menon, Aditya K and Verma, Nakul},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Noise-tolerant fair classification},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2019/file/8d5e957f297893487bd98fa830fa6413-Paper.pdf},
+ volume = {32},
+ year = {2019}
+}
+
+@inproceedings{sharma2020data,
+title={Data augmentation for discrimination prevention and bias disambiguation},
+author={Sharma, Shubham and Zhang, Yunfeng and R{\'\i}os Aliaga, Jes{\'u}s M and Bouneffouf, Djallel and Muthusamy, Vinod and Varshney, Kush R},
+booktitle={Proceedings of the AAAI/ACM Conference on AI, Ethics, and Society},
+pages={358--364},
+year={2020}}
+
+@inproceedings{10.1145/3531146.3534644,
+author = {Pastaltzidis, Ioannis and Dimitriou, Nikolaos and Quezada-Tavarez, Katherine and Aidinlis, Stergios and Marquenie, Thomas and Gurzawska, Agata and Tzovaras, Dimitrios},
+title = {Data Augmentation for Fairness-Aware Machine Learning: Preventing Algorithmic Bias in Law Enforcement Systems},
+year = {2022},
+isbn = {9781450393522},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3531146.3534644},
+doi = {10.1145/3531146.3534644},
+abstract = {Researchers and practitioners in the fairness community have highlighted the ethical and legal challenges of using biased datasets in data-driven systems, with algorithmic bias being a major concern. Despite the rapidly growing body of literature on fairness in algorithmic decision-making, there remains a paucity of fairness scholarship on machine learning algorithms for the real-time detection of crime. This contribution presents an approach for fairness-aware machine learning to mitigate the algorithmic bias / discrimination issues posed by the reliance on biased data when building law enforcement technology. Our analysis is based on RWF-2000, which has served as the basis for violent activity recognition tasks in data-driven law enforcement projects. We reveal issues of overrepresentation of minority subjects in violence situations that limit the external validity of the dataset for real-time crime detection systems and propose data augmentation techniques to rebalance the dataset. The experiments on real world data show the potential to create more balanced datasets by synthetically generated samples, thus mitigating bias and discrimination concerns in law enforcement applications.},
+booktitle = {Proceedings of the 2022 ACM Conference on Fairness, Accountability, and Transparency},
+pages = {2302-2314},
+numpages = {13},
+location = {Seoul, Republic of Korea},
+series = {FAccT '22}
+}
+
+@article{10.14778/3461535.3463474,
+author = {Salazar, Ricardo and Neutatz, Felix and Abedjan, Ziawasch},
+title = {Automated Feature Engineering for Algorithmic Fairness},
+year = {2021},
+issue_date = {May 2021},
+publisher = {VLDB Endowment},
+volume = {14},
+number = {9},
+issn = {2150-8097},
+url = {https://doi.org/10.14778/3461535.3463474},
+doi = {10.14778/3461535.3463474},
+abstract = {One of the fundamental problems of machine ethics is to avoid the perpetuation and amplification of discrimination through machine learning applications. In particular, it is desired to exclude the influence of attributes with sensitive information, such as gender or race, and other causally related attributes on the machine learning task. The state-of-the-art bias reduction algorithm Capuchin breaks the causality chain of such attributes by adding and removing tuples. However, this horizontal approach can be considered invasive because it changes the data distribution. A vertical approach would be to prune sensitive features entirely. While this would ensure fairness without tampering with the data, it could also hurt the machine learning accuracy. Therefore, we propose a novel multi-objective feature selection strategy that leverages feature construction to generate more features that lead to both high accuracy and fairness. On three well-known datasets, our system achieves higher accuracy than other fairness-aware approaches while maintaining similar or higher fairness.},
+journal = {Proc. VLDB Endow.},
+month = {may},
+pages = {1694-1702},
+numpages = {9}
+}
+
+@inproceedings{NEURIPS2021_64ff7983,
+author = {Du, Mengnan and Mukherjee, Subhabrata and Wang, Guanchu and Tang, Ruixiang and Awadallah, Ahmed and Hu, Xia},
+booktitle = {Advances in Neural Information Processing Systems},
+editor = {M. Ranzato and A. Beygelzimer and Y. Dauphin and P.S. Liang and J. Wortman Vaughan},
+pages = {12091--12103},
+publisher = {Curran Associates, Inc.},
+title = {Fairness via Representation Neutralization},
+url = {https://proceedings.neurips.cc/paper_files/paper/2021/file/64ff7983a47d331b13a81156e2f4d29d-Paper.pdf},
+volume = {34},
+year = {2021}
+}
